HVAC Backup 2/objects/Minimum_Wage_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Accumulation__c</fullName>
        <label>Accumulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Casual_Leave__c</fullName>
        <label>Casual Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highly_Skilled__c</fullName>
        <label>Highly Skilled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manpower_Type__c</fullName>
        <formula>State__c + &apos;-&apos; + Industry_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manpower Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privilege_Leave__c</fullName>
        <label>Privilege Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Semi_Skilled_A__c</fullName>
        <label>Semi-Skilled (A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Semi_Skilled_B__c</fullName>
        <label>Semi-Skilled (B)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sick_Leave__c</fullName>
        <label>Sick Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skilled_A__c</fullName>
        <label>Skilled A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skilled_B__c</fullName>
        <label>Skilled B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Clerical__c</fullName>
        <label>Supervisor/ Clerical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Leave_years__c</fullName>
        <label>Total Leave / years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unskilled_Workman__c</fullName>
        <label>Unskilled Workman</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Minimum Wage Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Industry_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>Minimum Wage Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minimum Wage Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>